fix color contrast

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ h1, h3{/*hero settings*//*hero settings*/
 }
 
 .buyer{
-    color: var(--soft-pink);
+    color: #F4AECE;
 }
 
 .name{
